atualizacao 3.1: Ajuste de favcon; Atualizacao de pagina de projetos.

--- a/acoaching.html
+++ b/acoaching.html
@@ -133,9 +133,9 @@
      
         <section>
             <div class="p-proj-story cor-3">
-                <h1>Story-Telling</h1>
-                <p>Com base nas necessidades do cliente, foi possível entender um pouco melhor do público a ser atingido, dando abertura para a criação de uma pequena história para imaginar como é este usuário.
-                    Era uma vez, uma pessoa, formada em administração, que gostaria de fazer algum curso na área de RH, para conseguir um trabalho melhor. Porém, ele não sabia onde pesquisar e foi perguntar por recomendações a amigos e a procurar na internet. Em uma de suas pesquisas, encontrou um site que tinha um curso que a interessou muito. Ela começou a fazer o curso e desde então usa o curso para estudar e recomenda para seus colegas de área.</p>
+                <h1>Problema</h1>
+                <p>Com base nas necessidades do cliente, foi possível entender um pouco melhor do público a ser atingido, dando abertura para a criação de uma pequena história para imaginar como é este usuário e entender suas dificuldades.</p>
+                <p>Era uma vez, uma pessoa, formada em administração, que gostaria de fazer algum curso na área de RH, para conseguir um trabalho melhor. Porém, ele não sabia onde pesquisar e foi perguntar por recomendações a amigos e a procurar na internet. Em uma de suas pesquisas, encontrou um site que tinha um curso que a interessou muito. Ela começou a fazer o curso e desde então usa o curso para estudar e recomenda para seus colegas de área.</p>
             </div>
             <div class="p-proj-persona cor-3">
                 <h1>Persona</h1>
