--- a/bikcraft.html
+++ b/bikcraft.html
@@ -136,13 +136,13 @@
 
         <section>
             <div class="p-proj-story cor-3">
-                <h1>Story-Telling</h1>
-                <p>Com base no público-alvo e nas necessidades do cliente, foi possível entender um pouco melhor do público a ser atingido, dando abertura para a criação de uma pequena história para imaginar como é este usuário.
-                    Era uma vez, um rapaz que trabalhava com tecnologia e todos os dias, pegava um ônibus muito cheio até chegar aos trabalho. Com o trânsito muito alto, não valia a pena ir de carro todos os dias, até pelos custos de manter um carro e da gasolina em si, esse homem deixava o carro em casa, mas analisava uma forma que fosse mais rápida, mais confortável que o ônibus e mais econômica que o carro. Então, um dia, conversando com um amigo, descobriu que este amigo utilizava uma bicicleta elétrica para ir até o trabalho, decidindo por comprar uma bicicleta elétrica.</p>
+                <h1>Problema</h1>
+                <p>De acordo com o público-alvo e as necessidades do cliente, foi possível entender um pouco melhor do público a ser atingido, dando abertura para a criação de uma pequena história para imaginar como é este usuário, podendo entender um pouco qual é a maior dificuldade enfrentada.</p>
+                <p>Era uma vez, um rapaz que trabalhava com tecnologia e todos os dias, pegava um ônibus muito cheio até chegar aos trabalho. Com o trânsito muito alto, não valia a pena ir de carro todos os dias, até pelos custos de manter um carro e da gasolina em si, esse homem deixava o carro em casa, mas analisava uma forma que fosse mais rápida, mais confortável que o ônibus e mais econômica que o carro. Então, um dia, conversando com um amigo, descobriu que este amigo utilizava uma bicicleta elétrica para ir até o trabalho, decidindo por comprar uma bicicleta elétrica.</p>
             </div>
             <div class="p-proj-persona cor-3">
                 <h1>Persona</h1>
-                <p>Surgiu a partir do estudo do Story-Telling, personificando a pessoa da história, ajudando no desenvolvimento do produto, mantendo todos no foco das necessidades do cliente.</p>
+                <p>Surgiu a partir do estudo da narrativa, personificando a pessoa da história, ajudando no desenvolvimento do produto, mantendo todos no foco das necessidades do cliente.</p>
                 <img src="./img/9-bikcraft/imagens/4-persona.jpg" alt="Persona">
             </div>
             <div class="p-proj-stake cor-3">
