--- a/drmichelangelo.html
+++ b/drmichelangelo.html
@@ -135,13 +135,13 @@
         
         <section>
             <div class="p-proj-story cor-3">
-                <h1>Story-Telling</h1>
-                <p>Com base no público-alvo e nas necessidades do cliente, foi possível entender um pouco melhor do público a ser atingido, dando abertura para a criação de uma pequena história para imaginar como é este usuário.
-                    Era uma vez, uma garota que tinha uma avó doente. A avó tinha um grande desconforto abdominal e já haviam ido no hospital público, e além da fila e da demora, disseram que elas tinham que procurar um especialista Gastroenterologista e precisavam de um encaminhamento o mais rápido possível, algo que não conseguiram no serviço público. Então, procuraram especialistas particulares que pudessem atendê-la. Conseguiram alguns contatos, mas como não tinham convênio médico, o valor da consulta particular ficava muito alta. Pesquisaram bastante, até que uma amiga da garota avisou que existia um aplicativo de agendamento de consultas com preços bem atraentes, logo ela entrou no aplicativo e conseguiu agendar a consulta.</p>
+                <h1>Problema</h1>
+                <p>Com base no público-alvo e nas necessidades do cliente, foi possível verificar o problema, que foi melhor explorado pela narrativa abaixo.</p>
+                <p> Era uma vez, uma garota que tinha uma avó doente. A avó tinha um grande desconforto abdominal e já haviam ido no hospital público, e além da fila e da demora, disseram que elas tinham que procurar um especialista Gastroenterologista e precisavam de um encaminhamento o mais rápido possível, algo que não conseguiram no serviço público. Então, procuraram especialistas particulares que pudessem atendê-la. Conseguiram alguns contatos, mas como não tinham convênio médico, o valor da consulta particular ficava muito alta. Pesquisaram bastante, até que uma amiga da garota avisou que existia um aplicativo de agendamento de consultas com preços bem atraentes, logo ela entrou no aplicativo e conseguiu agendar a consulta.</p>
             </div>
             <div class="p-proj-persona cor-3">
                 <h1>Persona</h1>
-                <p>Surgiu a partir do estudo do Story-Telling, personificando a pessoa da história, ajudando no desenvolvimento do produto, mantendo todos no foco das necessidades do cliente.</p>
+                <p>Surgiu a partir do estudo do Story-Telling, personificando a pessoa da história, ajudando no desenvolvimento do produto, mantendo o foco no cliente.</p>
                 <img src="./img/8-michelangelo/imagens/4-persona.jpg" alt="Persona">
             </div>
             <div class="p-proj-stake cor-3">
