--- a/nion.html
+++ b/nion.html
@@ -141,13 +141,13 @@
      
         <section>
             <div class="p-proj-story cor-3">
-                <h1>Story-Telling</h1>
-                <p>Foi criada uma história, com base nas necessidades do cliente deste restaurante, para tentar entendê-lo melhor.
-                    Era uma vez, um casal que queria comer comida japonesa. Todos os dias eles procuravam nas ruas, informações de restaurantes que pudessem jantar no final de semana. Isso não era muito útil, pois dependiam de andar e perguntar o cardápio do cardápio, perguntar preços, para cada restaurante encontrado. Por causa disso, resolveram pesquisar na internet e encontraram um site que os informava sobre um bom restaurante, os preços eram compatíveis com seu bolso e com a possibilidade de agendamento. Desde então, eles usam o site regularmente para fazer suas reservas e conferir as atualizações no menu.</p>
+                <h1>Problema</h1>
+                <p>Com base nas necessidades do cliente deste restaurante, foi identificado um problema, melhor explorado por meio de uma narrativa.</p>
+                <p>Era uma vez, um casal que queria comer comida japonesa. Todos os dias eles procuravam nas ruas, informações de restaurantes que pudessem jantar no final de semana. Isso não era muito útil, pois dependiam de andar e perguntar o cardápio do cardápio, perguntar preços, para cada restaurante encontrado. Por causa disso, resolveram pesquisar na internet e encontraram um site que os informava sobre um bom restaurante, os preços eram compatíveis com seu bolso e com a possibilidade de agendamento. Desde então, eles usam o site regularmente para fazer suas reservas e conferir as atualizações no menu.</p>
             </div>
             <div class="p-proj-persona cor-3">
                 <h1>Persona</h1>
-                <p>Para o desenvolvimento do produto, foi criada uma persona, que ajudou a ter uma maior atenção com o cliente.</p>
+                <p>Para o desenvolvimento do produto, foi criada uma persona, que ajudou ne melhor identificação do público alvo.</p>
                 <img src="./img/7-nion/imagens/4-persona.jpg" alt="Persona">
             </div>
             <div class="p-proj-stake cor-3">
