--- a/curriculo.html
+++ b/curriculo.html
@@ -100,7 +100,8 @@
 
                 <div class="curriculo-adicional">
                     <h2>INFORMAÇÕES ADICIONAIS</h2>
-                    <ul>                        
+                    <ul>
+                        <li>- Curso Wordpress como CMS – Origamid – 18 horas. Conclusão: 04/2023</li>                        
                         <li>- UX Design de A a Z – Udemy – 11,5 horas. Conclusão: 06/2022</li>
                         <li>- HTML e CSS para Iniciantes – Origamid – 46 horas. Conclusão:07/2022</li>
                         <li>- Adobe XD – Instituição: Origamid. – 6 horas. Conclusão: 05/2022</li>
@@ -110,9 +111,9 @@
                         <li>- Tipografia Avançada – Instituição: Origamid. – 6 horas. Conclusão: 06/2022</li>
                         <li>- Curso Excel Avançado – Fundação Bradesco – 30 horas. Conclusão: 02/2020</li>
                         <li>- Conhecimentos Avançados de Office</li>
-                        <li>- Conhecimento intermediário em Figma, Adobe Photoshop, Adobe Illustrator</li>
-                        <li>- Conhecimentos básicos em HTML, CSS e JavaScript</li>
-                        <li>- Conhecimentos em Design Thinging, Heurísticas, Benchmark, criação de protótipos (baixa, média e alta fidelidade), metodologias ágeis (Lean UX, Scrum, Kanban).</li>
+                        <li>- Conhecimento intermediário em Figma, Adobe Photoshop, Adobe Illustrator, Miro</li>
+                        <li>- Conhecimentos básicos em HTML, CSS, JavaScript, PHP e Wordpress (como CMS)</li>
+                        <li>- Conhecimentos em Design Thinking, Heurísticas, Benchmark, criação de protótipos (baixa, média e alta fidelidade), metodologias ágeis (Lean UX, Scrum, Kanban)</li>
                     </ul>
                 </div>
             </div>
