--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
             </div>
             <div class="proj-links">
                 <ul class="proj-links cor-3" fadeInDown data-anime="400">
+                    <li><a href="./xfarms.html"><img src="./img/10-xfarms/imagens/0 - xfarms - mini.jpg" width="260" height="150" alt="Xfarms">XFarms</a></li>
                     <li><a href="./nion.html"><img src="./img/1-home/images/2-nion.jpg" width="260" height="150" alt="Nion">Nion Restaurante Japonês</a></li>
                     <li><a href="./drmichelangelo.html"><img src="./img/1-home/images/3-dr michelangelo.jpg" width="260" height="150" alt="Dr.Michelangelo">Dr. Michelângelo</a></li>
-                    <li><a href="./bikcraft.html"><img src="./img/1-home/images/4-bikcraft.jpg" width="260" height="150" alt="Bikcraft">Bikcraft</a></li>
-                    <li><a href="./basedesignsystem.html"><img src="./img/1-home/images/6-card-design-sistem.jpg" width="260" height="150" alt="Base Design System">Base Design System</a></li>
+                    <li><a href="./bikcraft.html"><img src="./img/1-home/images/4-bikcraft.jpg" width="260" height="150" alt="Bikcraft">Bikcraft</a></li>                    
                 </ul>
             </div>
         </section>
