--- a/proj-phot-ilus.html
+++ b/proj-phot-ilus.html
@@ -54,7 +54,7 @@
                         <li><a href="./nion.html"><img src="./img/1-home/images/2-nion.jpg" width="260" height="150" alt="Nion">Nion Restaurante Japonês</a></li>
                         <li><a href="./drmichelangelo.html"><img src="./img/1-home/images/3-dr michelangelo.jpg" width="260" height="150" alt="Nion">Dr. Michelângelo</a></li>
                         <li><a href="./bikcraft.html"><img src="./img/1-home/images/4-bikcraft.jpg" width="260" height="150" alt="Nion">Bikcraft</a></li>
-                        <li><a href="./acoaching.html"><img src="./img/1-home/images/5-coach.jpg" width="260" height="150" alt="Nion">Academia Coaching</a></li>
+                        <li><a href="./xfarms.html"><img src="./img/10-xfarms/imagens/0 - xfarms - mini.jpg" width="260" height="150" alt="Xfarms">XFarms</a></li>
                     </ul>                
             </div>
             </section>
