--- a/proj-xd-fig.html
+++ b/proj-xd-fig.html
@@ -51,6 +51,7 @@
                     <h1 fadeInDown data-anime="300">Projetos</h1>
                 </div>            
                     <ul class="projetos-lista cor-3"fadeInDown data-anime="400">
+                        <li><a href="./xfarms.html"><img src="./img/10-xfarms/imagens/0 - xfarms - mini.jpg" width="260" height="150" alt="Xfarms">XFarms</a></li>
                         <li><a href="./nion.html"><img src="./img/1-home/images/2-nion.jpg" width="260" height="150" alt="Nion">Nion Restaurante Japonês</a></li>
                         <li><a href="./drmichelangelo.html"><img src="./img/1-home/images/3-dr michelangelo.jpg" width="260" height="150" alt="Nion">Dr. Michelângelo</a></li>
                         <li><a href="./bikcraft.html"><img src="./img/1-home/images/4-bikcraft.jpg" width="260" height="150" alt="Nion">Bikcraft</a></li>
