--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="intro-bg" fadeInDown data-anime="100">                
                 <div class="intro-conteudo cor-3" fadeInDown data-anime="100">                    
                     <h1 fadeInDown data-anime="200">Carlos David, UX/UI Designer</h1>                 
-                    <p fadeInDown data-anime="200">Olá, meu nome é Carlos David, tenho 32 anos sou um formado em Arquitetura e Urbanismo, com 10 anos de experiência na construção civil, com Especializado em Experiência do Usuário e atualmente me especializando em Metodologias Ágeis, sendo muito apaixonado por interfaces e por resolver problemas.
+                    <p fadeInDown data-anime="200">Olá, meu nome é Carlos David, tenho 32 anos sou um formado em Arquitetura e Urbanismo, com 10 anos de experiência na construção civil, com Especialização em Experiência do Usuário e atualmente me especializando em Metodologias Ágeis, sendo muito apaixonado por interfaces e por resolver problemas.
 
                     </p>
                 </div>              
