--- a/index.html
+++ b/index.html
@@ -34,10 +34,8 @@
             <div class="intro-bg" fadeInDown data-anime="100">                
                 <div class="intro-conteudo cor-3" fadeInDown data-anime="100">                    
                     <h1 fadeInDown data-anime="200">Carlos David, UX/UI Designer</h1>                 
-                    <p fadeInDown data-anime="200">Olá, meu nome é Carlos David, tenho 32 anos sou um formado em Arquitetura e Urbanismo, com 10 anos de experiência na construção civil, com Especialização em Experiência do Usuário e atualmente me especializando em Metodologias Ágeis, sendo muito apaixonado por interfaces e por resolver problemas.
-
-                    </p>
-                </div>              
+                    <p fadeInDown data-anime="200">Olá, meu nome é Carlos David, tenho 32 anos sou um formado em Arquitetura e Urbanismo, com 10 anos de experiência na construção civil, com Especialização em de Experiência do Usuário e atualmente me especializando em Metodologias Ágeis. Sendo muito apaixonado por interfaces e por resolver problemas, agora estou trabalhando como <SPAN style="color:#f8f0a7;">Web Designer</SPAN> e <SPAN style="color:#f8f0a7;">UX/UI Designer Freelancer</SPAN>.</p> 
+                </div>                             
                     <div class="intro-img">
                         <img src="./img/1-home/images/1-foto carlos.jpg" alt="Foto Carlos" fadeInDown data-anime="200">
                     </div>
