--- a/basedesignsystem.html
+++ b/basedesignsystem.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Base Design System</title>
 
-        <link rel="icon" href="./img/favcon/favcon2.svg" type="image/svg+xml">
+        <link rel="icon" href="./img/favcon/favcon.svg" type="image/svg+xml">
         <!-- css -->
         <link rel="stylesheet" href="./css/style.min.css">
         <!-- font -->
@@ -16,14 +16,14 @@
     </head>    
     <body>
         <header class="header-bg">
-            <div class="contato-header cor-3">
-                <h3><a href="./">Carlos David - (11)98115-1906</a></h3>
+            <div class="contato-header cor-0">
+                <h3><a href="./"><img src="./img/16-header/01-Logo p.png"  width="200" height="60" alt="Logo p"></a></h3>
             </div>
             <div>
                 <nav>
-                    <ul class="header-menu cor-3">
-                        <li><a href="./index.html">Sobre</a></li>
-                        <li><a href="./curriculo.html">Currículo</a></li>
+                    <ul class="header-menu cor-0">
+                        <li><a href="./sobre.html">Sobre</a></li>
+                        <li><a href="./servicos.html">Serviços</a></li>
                         <li><a href="./contatos.html">Contatos</a></li>
                     </ul>
                 </nav>
@@ -92,12 +92,12 @@
         <footer class="footer-bg">
             <div class="footer cor-3">
                 <div class="footer-contato cor-3">
-                    <h2>carlos.hs.david@gmail.com</h2>
+                    <p>© CSDavid Design. Alguns direitos reservados.</p>
                 </div>
                 <div class="footer-redes cor-3">
                     <ul>
-                        <li><a href="https://www.linkedin.com/in/carlos-david-ux/" target="_blank"><img src="./img/0-footer/icons/2-linkedin.svg" width="30" height="30" alt="LinkedIn"></a></li>
-                        <li><a href="https://www.behance.net/carlos-h-david" target="_blank"><img src="./img/0-footer/icons/4-behance.svg" width="30" height="30" alt="Behance"></a></li>
+                        <li><a href="https://api.whatsapp.com/send?phone=5511981151906&text=Ol%C3%A1." target="_blank"><img src="./img/0-footer/icons/6-whatsapp.svg" width="30" height="30" alt="WhatsApp"></a></li>
+                        <li><a href="https://www.linkedin.com/in/carlos-david-ux/" target="_blank"><img src="./img/0-footer/icons/2-linkedin.svg" width="30" height="30" alt="LinkedIn"></a></li>                        
                         <li><a href="https://github.com/carlos-hs-david" target="_blank"><img src="./img/0-footer/icons/5-github.svg" width="30" height="30" alt="GitHub"></a></li>                     
                     </ul>
                 </div>
