--- a/proj-phot-ilus.html
+++ b/proj-phot-ilus.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Projetos Photoshop e Illustrator</title>
 
-        <link rel="icon" href="./img/favcon/favcon2.svg" type="image/svg+xml">
+        <link rel="icon" href="./img/favcon/favcon.svg" type="image/svg+xml">
           <!-- css -->
           <link rel="stylesheet" href="./css/style.min.css">
           <!-- font -->
@@ -19,13 +19,13 @@
     <body>
         <header class="header-bg">
             <div class="contato-header cor-0">
-                <h3><a href="./">Carlos David - (11)98115-1906</a></h3>
+                <h3><a href="./"><img src="./img/16-header/01-Logo p.png"  width="200" height="60" alt="Logo p"></a></h3>
             </div>
             <div>
                 <nav>
                     <ul class="header-menu cor-0">
-                        <li><a href="./index.html">Sobre</a></li>
-                        <li><a href="./curriculo.html">Currículo</a></li>
+                        <li><a href="./sobre.html">Sobre</a></li>
+                        <li><a href="./servicos.html">Serviços</a></li>
                         <li><a href="./contatos.html">Contatos</a></li>
                     </ul>
                 </nav>
@@ -38,8 +38,8 @@
             <div>
             <div class="tech-programas cor-3"fadeInDown data-anime="200">
                 <ul>                    
-                    <li><a href="./proj-phot-ilus.html"><img src="./img/1-home/icons/3-photoshop.svg" width="200" height="200" alt="Photoshop">Photoshop</a></li>
-                    <li><a href="./proj-phot-ilus.html"><img src="./img/1-home/icons/4-illustrator.svg" width="200" height="200" alt="Illustrator">Illustrator</a></li>
+                    <li><a href="./proj-phot-ilus.html"><img src="./img/17-sobre/icons/3-photoshop.svg" width="200" height="200" alt="Photoshop">Photoshop</a></li>
+                    <li><a href="./proj-phot-ilus.html"><img src="./img/17-sobre/icons/4-illustrator.svg" width="200" height="200" alt="Illustrator">Illustrator</a></li>
                 </ul>
             </div>
 
@@ -51,9 +51,9 @@
                     <h1 fadeInDown data-anime="300">Projetos</h1>
                 </div>            
                     <ul class="projetos-lista cor-3"fadeInDown data-anime="400">
-                        <li><a href="./nion.html"><img src="./img/1-home/images/2-nion.jpg" width="260" height="150" alt="Nion">Nion Restaurante Japonês</a></li>
-                        <li><a href="./drmichelangelo.html"><img src="./img/1-home/images/3-dr michelangelo.jpg" width="260" height="150" alt="Nion">Dr. Michelângelo</a></li>
-                        <li><a href="./bikcraft.html"><img src="./img/1-home/images/4-bikcraft.jpg" width="260" height="150" alt="Nion">Bikcraft</a></li>
+                        <li><a href="./nion.html"><img src="./img/17-sobre/images/2-nion.jpg" width="260" height="150" alt="Nion">Nion Restaurante Japonês</a></li>
+                        <li><a href="./drmichelangelo.html"><img src="./img/17-sobre/images/3-dr michelangelo.jpg" width="260" height="150" alt="Nion">Dr. Michelângelo</a></li>
+                        <li><a href="./bikcraft.html"><img src="./img/17-sobre/images/4-bikcraft.jpg" width="260" height="150" alt="Nion">Bikcraft</a></li>
                         <li><a href="./xfarms.html"><img src="./img/10-xfarms/imagens/0 - xfarms - mini.jpg" width="260" height="150" alt="Xfarms">XFarms</a></li>
                     </ul>                
             </div>
@@ -63,12 +63,12 @@
         <footer class="footer-bg">
             <div class="footer cor-3">
                 <div class="footer-contato cor-3">
-                    <h2>carlos.hs.david@gmail.com</h2>
+                    <p>© CSDavid Design. Alguns direitos reservados.</p>
                 </div>
-                <div class="footer-redes cor-3">                   
+                <div class="footer-redes cor-3">
                     <ul>
-                        <li><a href="https://www.linkedin.com/in/carlos-david-ux/" target="_blank"><img src="./img/0-footer/icons/2-linkedin.svg" width="30" height="30" alt="LinkedIn"></a></li>
-                        <li><a href="https://www.behance.net/carlos-h-david" target="_blank"><img src="./img/0-footer/icons/4-behance.svg" width="30" height="30" alt="Behance"></a></li>
+                        <li><a href="https://api.whatsapp.com/send?phone=5511981151906&text=Ol%C3%A1." target="_blank"><img src="./img/0-footer/icons/6-whatsapp.svg" width="30" height="30" alt="WhatsApp"></a></li>
+                        <li><a href="https://www.linkedin.com/in/carlos-david-ux/" target="_blank"><img src="./img/0-footer/icons/2-linkedin.svg" width="30" height="30" alt="LinkedIn"></a></li>                        
                         <li><a href="https://github.com/carlos-hs-david" target="_blank"><img src="./img/0-footer/icons/5-github.svg" width="30" height="30" alt="GitHub"></a></li>                     
                     </ul>
                 </div>
