--- a/servicos.html
+++ b/servicos.html
@@ -94,7 +94,8 @@
                                 <h3>• Desenvolvimento do protótipo</h3>
                                 <p>Caso o cliente já tiver um produto bem desenvolvido em termos de UX, é possível ir diretamente para a fase de prototipação, onde será criado um protótipo do site para depois, começar as fases de codificação.  Caso o cliente já tenha o protótipo, podemos pular diretamente para o Desenvolvimento do código.</p>
                                 <h3>• Desenvolvimento do código</h3>
-                                <p>Tendo o protótipo em mãos, aprovado pelo cliente, o site começará a ser desenvolvido em HTML, CSS. em JavaScript e dependendo da necessidade do cliente, desenvolvido para ser utilizado no WordPress como CMS (método de gerenciamento de conteúdo sites). Com relação a Hospedagem e Domínio, será feita uma cotação de qual seria o mais vantajoso. O valor será incluído no orçamento.</p>
+                                <p>Tendo o protótipo em mãos, aprovado pelo cliente, o site começará a ser desenvolvido em HTML, CSS. e em JavaScript.</p>
+                                <p>Com relação a Hospedagem e Domínio, será feita uma cotação de qual seria o mais vantajoso. O valor será incluído no orçamento.</p>
                             <ul fadeInDown data-anime="1200">
                                 <li>*Uma etapa só seguirá para outra, se o cliente aprovar.</li>                                
                             </ul>
