--- a/basedesignsystem.html
+++ b/basedesignsystem.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Base Design System</title>
+        <title>Base Design System - Conheça o Projeto</title>
+        <meta name="description" content="Temos a solução digital para o seu negócio. Soluções em Web Design e UX/UI.">
 
         <link rel="icon" href="./img/favcon/favcon.svg" type="image/svg+xml">
         <!-- css -->
