--- a/proj-xd-fig.html
+++ b/proj-xd-fig.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Projetos Figma e Adobe XD</title>
+        <meta name="description" content="Temos a solução digital para o seu negócio. Soluções em Web Design e UX/UI.">
 
         <link rel="icon" href="./img/favcon/favcon.svg" type="image/svg+xml">
           <!-- css -->
