--- a/proj-phot-ilus.html
+++ b/proj-phot-ilus.html
@@ -56,6 +56,8 @@
                         <li><a href="./drmichelangelo.html"><img src="./img/17-sobre/images/3-dr michelangelo.jpg" width="260" height="150" alt="Nion">Dr. Michelângelo</a></li>
                         <li><a href="./bikcraft.html"><img src="./img/17-sobre/images/4-bikcraft.jpg" width="260" height="150" alt="Nion">Bikcraft</a></li>
                         <li><a href="./xfarms.html"><img src="./img/10-xfarms/imagens/0 - xfarms - mini.jpg" width="260" height="150" alt="Xfarms">XFarms</a></li>
+                        <li><a href="./xfarms.html"><img src="./img/10-xfarms/imagens/0 - xfarms - mini.jpg" width="260" height="150" alt="Xfarms">XFarms</a></li>
+                        <li><a href="./redes-sociais.html"><img src="./img/18-redes-sociais/chamada-redes.jpg" width="260" height="150" alt="Xfarms">Redes Sociais</a></li>
                     </ul>                
             </div>
             </section>
