atualizacao 6.0 - adicao de projeto caravan e devidos icones

--- a/proj-html-css.html
+++ b/proj-html-css.html
@@ -41,7 +41,7 @@
                 <ul>                    
                     <li><a href="./proj-html-css.html"><img src="./img/17-sobre/icons/5-html.svg" width="200" height="200" alt="HTML">HTML</a></li>
                     <li><a href="./proj-html-css.html"><img src="./img/17-sobre/icons/6-css.svg" width="200" height="200" alt="CSS">CSS</a></li>
-                    <li><a href="./proj-html-css.html"><img src="./img/17-sobre/icons/7-javascript.svg" width="200" height="200" alt="javascript">javascript</a></li>                                          
+                    <li><a href="./proj-html-css.html"><img src="./img/17-sobre/icons/7-javascript.svg" width="200" height="200" alt="javascript">javascript</a></li>                                                             
                 </ul>
             </div>
 
@@ -53,6 +53,7 @@
                     <h1 fadeInDown data-anime="300">Projetos</h1>
                 </div>            
                     <ul class="projetos-lista cor-3"fadeInDown data-anime="400">
+                        <li><a href="./caravan.html"><img src="./img/17-sobre/images/7-caravan.jpg" width="260" height="150" alt="Caravan">Caravan</a></li> 
                         <li><a href="./nion.html"><img src="./img/17-sobre/images/2-nion.jpg" width="260" height="150" alt="Nion">Nion Restaurante Japonês</a></li>                        
                         <li><a href="./bikcraft.html"><img src="./img/17-sobre/images/4-bikcraft.jpg" width="260" height="150" alt="Nion">Bikcraft</a></li>
                         <li><a href="./guessnumber.html"><img src="./img/6-projhtml/imagens/3-guessnumber.jpg" width="260" height="150" alt="Nion">GuessNumber</a></li>
