--- a/sobre.html
+++ b/sobre.html
@@ -61,9 +61,9 @@
             </div>
             <div class="proj-links">
                 <ul class="proj-links cor-3" fadeInDown data-anime="400">
+                    <li><a href="./caravan.html"><img src="./img/17-sobre/images/7-caravan.jpg" width="260" height="150" alt="Caravan">Caravan</a></li>
                     <li><a href="./xfarms.html"><img src="./img/10-xfarms/imagens/0 - xfarms - mini.jpg" width="260" height="150" alt="Xfarms">XFarms</a></li>
-                    <li><a href="./nion.html"><img src="./img/17-sobre/images/2-nion.jpg" width="260" height="150" alt="Nion">Nion Restaurante Japonês</a></li>
-                    <li><a href="./drmichelangelo.html"><img src="./img/17-sobre/images/3-dr michelangelo.jpg" width="260" height="150" alt="Dr.Michelangelo">Dr. Michelângelo</a></li>
+                    <li><a href="./drmichelangelo.html"><img src="./img/17-sobre/images/3-dr michelangelo.jpg" width="260" height="150" alt="Nion">Dr. Michelângelo</a></li>                    
                     <li><a href="./bikcraft.html"><img src="./img/17-sobre/images/4-bikcraft.jpg" width="260" height="150" alt="Bikcraft">Bikcraft</a></li>                    
                 </ul>
             </div>
