atualizao 6.1 pag sobre, home e servicos

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <p fadeInDown data-anime="700">O primeiro passo para resolver um problema, é torna-lo claro. Só depois conseguimos trabalhar na solução.</p>
             </div>
           <div>
-            <p fadeInDown data-anime="800">Olá, meu nome é Carlos David, tenho 32 anos sou um formado em Arquitetura e Urbanismo, com 10 anos de experiência na construção civil, com Especialização em de Experiência do Usuário e atualmente me especializando em Metodologias Ágeis. Sendo muito apaixonado por interfaces e por resolver problemas, agora estou trabalhando como <SPAN style="color:#f8f0a7";>Web Designer</SPAN> e <SPAN style="color:#f8f0a7";>UX/UI Designer Freelancer</SPAN>.</p> 
+            <p fadeInDown data-anime="800">Olá, meu nome é Carlos David, tenho 32 anos sou um formado em Arquitetura e Urbanismo, com 10 anos de experiência na construção civil, com Especialização em de Experiência do Usuário e atualmente me especializando em Metodologias Ágeis e cursando a Graduação em Design Gráfico. Sendo muito apaixonado por interfaces e por resolver problemas, agora estou trabalhando como <SPAN style="color:#f8f0a7";>Web Designer</SPAN> e <SPAN style="color:#f8f0a7";>UX/UI Designer Freelancer</SPAN>.</p> 
           </div>         
           
         </section>
