--- a/servicos.html
+++ b/servicos.html
@@ -37,7 +37,7 @@
             <div class="servicos-bg cor-3">
                 <div class="servicos-intro">                    
                     <div class="servicos-intro-texto">
-                        <h1 fadeInDown data-anime="100">Serviços</h1>                                                              
+                        <h1 fadeInDown data-anime="100">Áreas de Trabalho</h1>                                                              
                         <p fadeInDown data-anime="200">Os serviços oferecidos são o desenvolvimento de produtos  ou serviço por meio da Experiência do Usuário e do Design de Interface(UX/UI). O método utilizado é o do Design Thinking e etapas e suas entregas podem variar de acordo com a necessidade observada.</p>
                         <p fadeInDown data-anime="300">Os serviços de Web Design são o desenvolvimentos de sites por meio  de HTML, CSS, JavaScript e WordPress. Dependendo da necessidade, o médo pode muda. Minha principal especialidade são sites institucionais. </p>    
                     </div>
